test_regress/t/t_fork.out
%Error: t/t_fork.v:10:14: Unsupported: fork statements
   10 |       fork : fblk
      |              ^~~~
%Error: Exiting due to
